--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="idoerNz3PlQ5+1tgs/yFYkg3EPeLzNBOV3CFhhBxyEjqwMLeYdgTZc56T8kvcw7Kwh+i05cZ32mEBXyP4v+j35jqJBk+pZpX9phjSOsdQ/CxwbwY5pEALQGOyMVLk25J">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N6x8I+LRRmNxix6rOXKQ+aaqmgaKxF7oqpPxTLWS76WjLRhmYdqIek9YGHh6z8hvY8/JRnmuWOR2yP5m4TWqUYpFXa+uANrMoASz8k04CZuT3yxM2tUo7LaXFnLdIGsW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
